force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Column_Status_Assignment__c/agf__ADM_Column_Status_Assignment__c.object-meta.xml
<CustomObject>
    <label>Column Status Assignment</label>
    <nameField>
        <displayFormat>CSA-{000000}</displayFormat>
        <label>Column Status Assignment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Column Status Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>