force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Column_Status_Assignment__c/fields/agf__Work_Status__c.field-meta.xml
<CustomField>
    <fullName>agf__Work_Status__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Work Status</label>
    <referenceTo>agf__ADM_Work_Status__c</referenceTo>
    <relationshipLabel>Column Status Assignments</relationshipLabel>
    <relationshipName>Column_Status_Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>